RockWeb/Styles/_components.less
/*
    Used to manage styles related to reusable components / widgets.
    
    1. Pickers - used to pick complex data types
    2. Banner - used as the primary heading for a page or large section
    3. Tree - used for tree control
    4. Person List - used to show a list of people
    5. Rollover - Used to hide/show items in the UI has the mouse rolls-over a container.
    6. Pagelist - used to list child pages; currently used in admin screens
    7. Tags - component that allows you to tag entities
    8. Switch - uses the Bootstrap Switch component
    9. Smart Searh - search at th top of the page for searching people, groups, etc.
    10. Title - markup for styling header titles
    11. Notifications - additional styles to the Bootstrap notifications
    12. Labels - additional label defintions that extend Boostrap labels (eg label-campus)
    13. Datepicker - styles for the date picker
    14. Timepicker - styles for the time picker
    15. File Upload / Image Upload - styles for the file / image uploader
    16. Actions - used to hold buttons at the bottom of forms.
    17. Code Editor - Styles for the code editor control
    18. Update Panel Status - Styles for the wait screen on an update panel
    19. Group List - styles a group of people in a ul -> li format
*/

// 1. Pickers
// -------------------------

.picker {
    position: relative;
    width: 220px; // needed when floated right to keep the picker from shifting when the (x) appears to allow delete
    .clearfix();

    .picker-label {
        padding: @padding-base-vertical @padding-base-horizontal;
        font-size: @font-size-base;
        color: @input-color;
        background-color: @input-group-addon-bg;
        border: 1px solid @input-group-addon-border-color;
        border-radius: @border-radius-base;
        display: inline-block;
        min-width: 200px;
        float: left;

        i {
            margin-right: 6px;
            float: left;
            margin-top: 2px
        }

        span {
            float: left;
            margin-right: 6px;
        }

        .caret {
            border-top: 4px solid @input-color;
            margin-top: 9px;
        }
    }

    .picker-select-none {
        display: block;
        float: left;
        margin: 6px 0 0 6px;
    }

    .scroll-container-picker { 
        width: 355px; 

        .viewport { 
            width: 340px;  
            height: 190px;
        }

        .scrollbar {
            margin-top: 10px;
        }
    }

    h4 {
        font-size: 14px;
        font-weight: @font-weight-semibold;
    }

    .picker-menu {
        width: 370px;
        padding: 10px;

        h4:first-child {
            margin-top: 0;
        }
    }

    .picker-actions {
        background-color: @accent-light-color;
        padding: 10px;
        border-top: 1px solid @accent-color;
        border-radius: 0 0 @border-radius-base @border-radius-base;
        margin: 10px -10px -10px -10px;
    }

    // details used for pickers like person picker to show the details of the selected item
    .picker-select-item-details {
        margin-left: 20px;

        img {
            float: left;
        }

        .contents {
            float: left;
            margin-left: 10px;

            h5 {
                margin-bottom: 2px;
            }
        }
    }

    &.picker-geography {
        .picker-menu {
            width: 520px;
        }
    }
    &.picker-person {
        
        .picker-select {
            padding: 0;
            list-style: none;
        }
        
        .picker-select-item-details img {
            width: 65px;
        }
    }
}

#dialog .scroll-container-picker 
{
    width: 360px;

    .viewport {
        width: 340px;  
        height: 190px;
    }
}


// 2. Banner
// -------------------------

.banner
{
    color: @banner-text-color;
    background-color: @banner-bg;
    border-radius: @banner-border-radius;
    border: @banner-border-size solid @banner-border-color;
    font-weight: @banner-font-weight;
    font-size: @banner-font-size;
    padding: @banner-padding;
    margin: 0 0 12px;
    .clearfix;

    h1 {
        float: left;
        margin: 0;
        font-weight: @banner-font-weight;

        .first-word {
            font-weight: @banner-firstword-weight;
        }

        i {
            margin-right: 12px;
        }
    }

    .label {
        float: right;
        margin-top: 16px;
        margin-left: 6px;
    }
}

// 3. Tree
// -------------------------
ul.rocktree,
ul.rocktree ul {
	list-style-type: none;
	margin: 10px 0px;
	padding: 0px;
}

ul.rocktree ul {
	margin: 0px 0px 0px 20px;
}

.rocktree {
    
    .rocktree-item {

        white-space: nowrap;
        
        & > i {
            cursor: pointer;
            padding: 4px;
        }
    }
    
    li {
	    margin: 0px;
    }

    span,
    a {
	    margin: 1px;
	    display: inline-block;
    }

    .rocktree-name:hover,
    span:hover,
    span:hover a {
	    background: @accent-bold-color;
        color: @accent-bold-text-color;
    }

    .selected,
    .selected a {
	    background: @accent-semibold-color;
        color: @accent-semibold-text-color
    }

    .rocktree-name {
	    padding: 2px 6px;
	    border-radius: 3px;
	    cursor: pointer;
    }

    .rocktree-loading {
      margin-left: 10px;
      color: @text-color !important;
      font-size: 12px;

       i {
          margin-right: 5px;
       }
    }

    .rocktree-leaf {
        padding-left: 14px;
    }
}

// treeview wrapper
.treeview {
    
    margin-bottom: 12px;

    .treeview-actions {
        margin-bottom: 8px;

        .btn {
            margin-bottom: 4px;
        }
    }

    .treeview-scroll {
        background-color: @body-bg;
        border-radius: @border-radius-base;
        border: 1px solid @accent-color;
    }
}
/* ... */

